# generali-pricing-simulation

./: AGENTS.md  README.md  data.py  main.py  pyproject.toml
data/: models.py
experiments/: logging.py  runner.py
optimization/: objective.py  policy.py
optimization/gradients/: first_order.py
src/experiments/: logging.py  runner.py  visualization.py
src/optimization/: __init__.py  common.py  objective.py  policy.py
src/optimization/gradients/: first_order.py  zeroth_order.py
tests/: test_smoke.py
