[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generali-pricing-simulation"
version = "0.1.0"
description = "Pricing simulation and optimization demo using Stein gradient estimators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
